// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio renders correctly 1`] = `
<div
  className="elementContainer"
>
  <span
    className="checkable"
  >
    <label
      className="label"
    >
      <input
        className="element"
        name="Name"
        type="checkbox"
        value="Value"
      />
      <span
        className="afterFormElement"
      />
      <span
        className="checkmark"
      />
    </label>
  </span>
</div>
`;

exports[`Radio renders required correctly 1`] = `
<div
  className="elementContainer"
>
  <span
    className="checkable"
  >
    <label
      className="label"
    >
      <input
        className="element"
        name="Name"
        required={true}
        type="checkbox"
        value="Value"
      />
      <span
        className="afterFormElement"
      />
      <span
        className="checkmark"
      />
    </label>
  </span>
</div>
`;
